Fix update user and post schoo, added todo for remaining of these api's