@@ -27,7 +27,7 @@ public abstract class UserMapper {
         AuthUser authUser = new AuthUser();
         authUser.setEmailAddress(user.getEmailAddress());
         authUser.setRoles(user.getRoles());
-        authUser.setAppMetadata(Map.of(USER_ID_TOKEN_CLAIM, user.getId(), AUTHORIZATIONS_TOKEN_CLAIM, Collections.emptySet()));
+        authUser.setAppMetadata(Map.of(USER_ID_TOKEN_CLAIM, user.getId(), AUTHORIZATIONS_TOKEN_CLAIM, Collections.emptyMap()));
         return authUser;
     }
 
